feat: update all the marginnotes, cleanup

--- a/dermardiros/anoushabour.tex
+++ b/dermardiros/anoushabour.tex
@@ -2,11 +2,8 @@
 \label{ch:anoushabour}
 \index{dessert}
 \index{pudding}
-\textit{Sweet barley pudding}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 bowl} \\
     Prep time: 30 minutes + overnight rest \\
     Cook time: 45 minutes \\
@@ -16,16 +13,17 @@ Family member: Sybil
     1/4 cup sugar \\
     Yellow and sultan raisins \\
     Dried apricots, quartered \\
-    1/4 tsp rose water or orange blossom water, optional \\
+    1/4 tsp rose water or orange blossom water, optional 
 }
 
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{dermardiros/images/Anoushabour.JPG}
     \caption{Anoushabour from New Year's Eve brunch at AJ and Eddy's in 2011!}
-\end{marginfigure}[20pt]
+\end{marginfigure}
 
-% \newthought{}
-% \bigskip
+\textit{Sweet barley pudding}
+
+Family member: Sybil
 
 \begin{enumerate}
     \item In a pot, cook pearl barley in 2 cups of water for 10 minutes.
