--- a/dermardiros/banana_cake.tex
+++ b/dermardiros/banana_cake.tex
@@ -4,9 +4,7 @@
 \index{cake}
 \index{banana}
 
-Family member: Dzovag
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 loaf} \\
     Prep time: 20 minutes \\
     Cook time: 45 minutes \\
@@ -20,11 +18,10 @@ Family member: Dzovag
     1/4 tsp salt \\
     1 1/2 cups all-purpose flour \\
     1 tsp baking soda \\
-    1 tsp baking powder \\
+    1 tsp baking powder
 }
 
-% \newthought{}
-% \bigskip
+Family member: Dzovag
 
 \begin{enumerate}
     \item Preheat oven to 350\degree F.
