--- a/dermardiros/batons_sale.tex
+++ b/dermardiros/batons_sale.tex
@@ -1,12 +1,9 @@
-\chapter{Bâtons salés}
+\chapter{Bâtons Salés}
 \label{ch:batonsale}
 \index{dessert}
 \index{cookie}
-\textit{Savoury sticks}
 
-Family member: Nene Hermine
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 40-60 cookies} \\
     Prep time: 45 minutes \\
     Cook time: 30 minutes \\
@@ -19,11 +16,12 @@ Family member: Nene Hermine
     1 1/2 cups vegetable oil \\
     1/2 cup zaatar \\
     1 Egg \\
-    Nigella seeds \\
+    Nigella seeds
 }
 
-% \newthought{}
-% \bigskip
+\textit{Savoury sticks}
+
+Family member: Nene Hermine
 
 \begin{enumerate}
     \item In a large bowl, mix all the ingredients except the egg and nigella seeds. Add an additional flour if needed to obtain a non-sticky soft yet pliable dough.
@@ -33,9 +31,8 @@ Family member: Nene Hermine
     \item Bake at 350\degree F for about 30 minutes.
 \end{enumerate}
 
-\marginnote{
-    Sybil’s trick: You can freeze 2/3 of the cookies once they have baked and cooled.
-}
+Sybil’s trick: You can freeze 2/3 of the cookies once they have baked and cooled.
+
 % Find right place for pictures
 % \begin{figure}
   % \includegraphics[width=60mm]{dermardiros/images/Grandpa and grandma.JPG}
