--- a/dermardiros/best_chocolatechip_cookies.tex
+++ b/dermardiros/best_chocolatechip_cookies.tex
@@ -4,9 +4,7 @@
 \index{cookies}
 \index{chocolate}
 
-Family member: Emma
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 12 cookies} \\
     Prep time: 20 minutes \\
     Cook time: 12-15 minutes \\
@@ -21,11 +19,10 @@ Family member: Emma
     1 1/4 cups all-purpose flour (155g) \\
     1/2 tsp baking soda \\
     4 oz milk or semi-sweet chocolate chunks (110g) \\
-    4 oz dark chocolate chunks (110g), or your preference \\
+    4 oz dark chocolate chunks (110g), or your preference
 }
 
-% \newthought{}
-% \bigskip
+Family member: Emma
 
 \begin{enumerate}
     \item Preheat oven to 350\degree F or 180\degree C.
