--- a/dermardiros/betteraves.tex
+++ b/dermardiros/betteraves.tex
@@ -1,12 +1,10 @@
-\chapter{Garmir panjar tourshi}
+\chapter{Garmir Panjar Tourshi}
 \label{ch:beets}
 \index{side}
 \index{beet}
 \textit{Pickled beets with garlic}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 large side dish} \\
     Prep time: 15 minutes \\
     Cook time: 1 hour \\
@@ -15,11 +13,10 @@ Family member: Sybil
     3 lbs red beets \\
     Garlic, peeled and cut into slices \\
     White vinegar \\
-    Salt \& pepper \\
+    Salt \& pepper
 }
 
-% \newthought{}
-% \bigskip
+Family member: Sybil
 
 \begin{enumerate}
     \item Boil the red beets until you can poke them with a knife.
