--- a/dermardiros/beureg.tex
+++ b/dermardiros/beureg.tex
@@ -3,11 +3,8 @@
 \index{meal}
 \index{spinach}
 \index{feta}
-\textit{Spinach and cheese pie}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 large pan} \\
     Prep time: 1 hour \\
     Cook time: 1 hour \\
@@ -30,11 +27,12 @@ Family member: Sybil
 
     \textbf{Egg wash} \\
     1 egg \\
-    Nigella or sesame seeds \\
+    Nigella or sesame seeds
 }
 
-% \newthought{}
-% \bigskip
+\textit{Spinach and cheese pie}
+
+Family member: Sybil
 
 \begin{enumerate}
     \item In a large bowl, mix all the ingredients for the dough together until a dough forms. Cover the bowl with plastic wrap and keep aside.
