--- a/dermardiros/biscuits_grandmere.tex
+++ b/dermardiros/biscuits_grandmere.tex
@@ -1,14 +1,11 @@
-\chapter{Biscuits grand-mère}
+\chapter{Biscuits Grand-Mère}
 \label{ch:biscuits_grandmere}
 \index{dessert}
 \index{mahleb}
 \index{sesame}
 \index{cookies}
-\textit{Circle sesame cookies}
 
-Family member: Metzma Lucie
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 40-60 cookies} \\
     Prep time: 45 minutes \\
     Cook time: 20 minutes \\
@@ -22,11 +19,12 @@ Family member: Metzma Lucie
     1/2 cup margarine, Becel \\
     1 cup milk \\
     Egg yolks \\
-    Sesame seeds \\
+    Sesame seeds
 }
 
-% \newthought{}
-% \bigskip
+\textit{Circle sesame cookies}
+
+Family member: Metzma Lucie
 
 \begin{enumerate}
     \item In a large bowl, mix the flour, baking powder, mahleb and sugar.
