--- a/dermardiros/cheureg_greatgrandma.tex
+++ b/dermardiros/cheureg_greatgrandma.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{bread}
 \index{Easter}
-\textit{Easter bread}
 
-Family member: Great Grandma
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 4-6 braids} \\
     Prep time: 5-6 hours \\
     Cook time: 30 minutes \\
@@ -22,11 +19,12 @@ Family member: Great Grandma
     2 cups of milk, lukewarm \\
     2 cups sugar \\
     1.5 cups of butter, melted \\
-    Egg yolks, beaten for egg wash \\
+    Egg yolks, beaten for egg wash 
 }
 
-% \newthought{}
-% \bigskip
+\textit{Easter bread}
+
+Family member: Great Grandma
 
 \begin{enumerate}
     \item In a large bowl, mix the flour, baking powder, mahleb and sugar.
