--- a/dermardiros/chocolate_fridge_cake.tex
+++ b/dermardiros/chocolate_fridge_cake.tex
@@ -4,19 +4,20 @@
 \index{chocolate}
 \index{cake}
 \index{cookies}
-\textit{Chocolate fridge cake with cookies}
 
-Family member: Metzma Lucie \& Dan
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 cake} \\
     Prep time: 20 minutes + chill overnight in the fridge\\
     Cook time: 5 minutes \\
     \vspace*{\baselineskip}
 
      1 pack of Sheriff chocolate pudding \\
-     1 pack of tea biscuits, Dare Traditions Social Tea brand \\
+     1 pack of tea biscuits, Dare Traditions Social Tea brand 
 }
+
+\textit{Chocolate fridge cake with cookies}
+
+Family member: Metzma Lucie \& Dan
 
 \newthought{Vasken} would eat half a pan of this.
 \bigskip
