--- a/dermardiros/ciambalone.tex
+++ b/dermardiros/ciambalone.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{Christmas}
 \index{cake}
-\textit{Italian Bundt Cake}
 
-Family member: Aunt Joanne
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 bundt cake} \\
     Prep time: ? minutes \\
     Cook time: 35 minutes \\
@@ -24,12 +21,12 @@ Family member: Aunt Joanne
     175 ml (3/4 cups) raisins (can substitute with Hershey’s caramel Chipits) \\
     175 ml (3/4 cups) Hershey’s mini chocolate chips \\
     2 red cherries \\
-    2 green cherries \\
+    2 green cherries 
 }
 
-% \newthought{}
+\textit{Italian Bundt Cake}
 
-% \newthought
+Family member: Aunt Joanne
 
 \begin{enumerate}
     \item Preheat oven at 180\degree C (350\degree F).
