--- a/dermardiros/clementinesalad.tex
+++ b/dermardiros/clementinesalad.tex
@@ -3,9 +3,7 @@
 \index{salad}
 \index{fruit}
 
-Family member: Aunt Joanne
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 10 servings} \\
     Prep time: 15 minutes \\
     Cook time: 0 minutes \\
@@ -14,11 +12,13 @@ Family member: Aunt Joanne
     Two heads of romaine lettuce – about 35 leaves \\
     15 clementines \\
     3/4 cup of cashews \\
-    Kraft Zesty Italian dressing \\
+    Kraft Zesty Italian dressing 
 }
 
 % \newthought{}
 % \bigskip
+
+Family member: Aunt Joanne
 
 \begin{enumerate}
     \item Wash the romaine lettuce, tear lettuce into bite-size pieces and place them in a chilled large salad bowl.
