--- a/dermardiros/foul.tex
+++ b/dermardiros/foul.tex
@@ -2,11 +2,8 @@
 \label{ch:foul}
 \index{dish}
 \index{beans}
-\textit{Egyptian fava beans}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 bowl?} \\
     Prep time: 10 minutes \\
     Cook time: 20 minutes \\
@@ -18,11 +15,12 @@ Family member: Sybil
     ? Lemons, juiced \\
     Olive oil \\
     Cumin \\
-    Parsley \\
+    Parsley 
 }
 
-% \newthought{}
-% \bigskip
+\textit{Egyptian fava beans}
+
+Family member: Sybil
 
 \begin{enumerate}
     \item Empty the fava beans and bean liquid from the can into a medium pot.
@@ -31,6 +29,4 @@ Family member: Sybil
     \item To serve, top with chopped parsley, a drizzle of olive oil and the onions.
 \end{enumerate}
 
-\marginnote{
-    Serve warm with tahini and fresh pita bread.
-}
+Serve warm with tahini and fresh pita bread.
