--- a/dermardiros/grandma_cake.tex
+++ b/dermardiros/grandma_cake.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{chocolate}
 \index{cake}
-\textit{Marble bundt cake}
 
-Family member: Metzma Lucie \& Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 bundt cake} \\
     Prep time: 20 minutes \\
     Cook time: 45 minutes - 1 hour \\
@@ -23,8 +20,10 @@ Family member: Metzma Lucie \& Sybil
     \vspace*{\baselineskip}
     2 tsp cocoa powder 
 }
-% \newthought{}
-% \bigskip
+
+\textit{Marble bundt cake}
+
+Family member: Metzma Lucie \& Sybil
 
 \begin{enumerate}
     \item In a large bowl, whisk the sugar, eggs and vanilla.
@@ -38,9 +37,11 @@ Family member: Metzma Lucie \& Sybil
 
 \begin{figure}
   \includegraphics[width=60mm]{dermardiros/images/Grandma cake 1.JPG}
+\end{figure}
+
+\begin{figure}
   \includegraphics[width=50mm]{dermardiros/images/Grandma cake 2.jpg}
 \end{figure}
 
-\marginnote{
-    Sybil’s alternatives: orange zest and 1 cup chocolate chips, 2 bananas, 1 cup raisins… You can use more cocoa powder if you want to have a deeper chocolate taste.
-}
+Sybil’s alternatives: orange zest and 1 cup chocolate chips, 2 bananas, 1 cup raisins… You can use more cocoa powder if you want to have a deeper chocolate taste.
+
