--- a/dermardiros/hamquiche.tex
+++ b/dermardiros/hamquiche.tex
@@ -5,9 +5,7 @@
 \index{pie}
 \index{brunch}
 
-Family member: Aunt Joanne
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 quiche} \\
     Prep time: 30-45 minutes \\
     Cook time: 45 minutes \\
@@ -21,11 +19,10 @@ Family member: Aunt Joanne
     1/4 pound (120 grams) of Swiss cheese \\
     1 slice of smoked ham \\
     3 large eggs \\
-    1 cup half-and-half cream \\
+    1 cup half-and-half cream 
 }
 
-% \newthought{}
-% \bigskip
+Family member: Aunt Joanne
 
 \begin{enumerate}
     \item Prepare a 9 inch piecrust, or take out the Tenderflake Deep Dish pie crust.
