--- a/dermardiros/katnabour.tex
+++ b/dermardiros/katnabour.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{rice}
 \index{pudding}
-\textit{Rice pudding}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 bowl} \\
     Prep time: 5 minutes \\
     Cook time: 30 minutes \\
@@ -18,6 +15,10 @@ Family member: Sybil
     3 tbsp sugar 
 }
 
+\textit{Rice pudding}
+
+Family member: Sybil
+
 \newthought{Secret tip:} microwave for a few second and serve warm in a small coffee cup with a sprinkle of cinnamon.
 
 \begin{marginfigure}
@@ -25,8 +26,6 @@ Family member: Sybil
   \caption{Anoushabour made in Barcelona}
 \end{marginfigure}
 
-% \newthought{}
-% \bigskip
 
 \begin{enumerate}
     \item In a pot, cook the rice in 1 cup of milk on low heat.
