--- a/dermardiros/khorabie.tex
+++ b/dermardiros/khorabie.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{cookies}
 \index{dates}
-\textit{Biscuits aux dattes}
 
-Family member: Metzma Lucie
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 24+ cookies} \\
     Prep time: 2-3 hours \\
     Cook time: 12-15 minutes \\
@@ -21,16 +18,17 @@ Family member: Metzma Lucie
     1 cup icing sugar \\
     6-6 1/2 cups flour \\
     1 kg dates, in puree (in a packet) \\
-    Zest and juice of 1 orange \\
+    Zest and juice of 1 orange 
 }
+
+\textit{Biscuits aux dattes}
+
+Family member: Metzma Lucie
 
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{dermardiros/images/PXL_20240427_185332023.PORTRAIT.ORIGINAL.jpg}
   \caption{Khorabiè mold}
-\end{marginfigure}[20pt]
-
-% \newthought{}
-% \bigskip
+\end{marginfigure}
 
 \begin{enumerate}
     \item In a bowl, mix the oil, milk, melted butter and melted Crisco.
