--- a/dermardiros/koubeba.tex
+++ b/dermardiros/koubeba.tex
@@ -2,11 +2,8 @@
 \label{ch:koubeba}
 \index{meal}
 \index{meat}
-\textit{Baked Kibbeh}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 round baking dish} \\
     Prep time: 45 minutes \\
     Cook time: 1 hour \\
@@ -25,8 +22,12 @@ Family member: Sybil
     Pine nuts \\
     Corinthian raisins \\
     Salt \& pepper \\
-    Melted butter and oil \\
+    Melted butter and oil 
 }
+
+\textit{Baked Kibbeh}
+
+Family member: Sybil
 
 \begin{enumerate}
     \item In a bowl, add the bulgur, cover with hot water and set aside.
