--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -4,11 +4,8 @@
 \index{meat}
 \index{tomato}
 \index{cabbage}
-\textit{Cabbage rolls stuffed with meat and rice}
 
-Family member: Metzma Lucie
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 6-8 servings} \\
     Prep time: 30-40 minutes \\
     Cook time: 45 minutes \\
@@ -26,11 +23,11 @@ Family member: Metzma Lucie
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}
   \caption{Topped with yogurt and dill!}
-  \label{fig:fig}
-\end{marginfigure}[20pt]
+\end{marginfigure}
 
-% \newthought{}
-% \bigskip
+\textit{Cabbage rolls stuffed with meat and rice}
+
+Family member: Metzma Lucie
 
 \begin{enumerate}
     \item Heat water and salt in a small pot.
@@ -45,8 +42,6 @@ Family member: Metzma Lucie
     \item Serve with yogurt and dill/parsley.
 \end{enumerate}
 
-\marginnote{
-    If have leftover meat mixture, can make kept balls or fill some tomatoes and place them next to the rolled dolma to cook together.
-    Can be frozen after cooking/cooling.
-    If using 1 whole savoy cabbage, double the filling quantities.
-}
+If have leftover meat mixture, can make kept balls or fill some tomatoes and place them next to the rolled dolma to cook together.
+Can be frozen after cooking/cooling.
+If using 1 whole savoy cabbage, double the filling quantities.
