--- a/dermardiros/meatpies.tex
+++ b/dermardiros/meatpies.tex
@@ -5,51 +5,27 @@
 \index{pie}
 \index{brunch}
 
-Family member: Aunt Joanne
-
-% \marginnote[20pt]{\\
-%     \textbf{Makes 6 meat pies} \\
-%     Prep time: 3 hours \\
-%     Cook time: 45 minutes, or 20 minutes for partially cooked (frozen) pies \\
-%     \vspace*{\baselineskip}
-
-%     5 pounds minced veal (2.3kg) \\
-%     4 pounds minced pork (1.8kg) \\
-%     2 pounds minced lean beef (907g or 1kg) \\
-%     Small pack of bacon with maple \\
-%     Becel margarine \\
-%     1/4 onion chopped in small pieces \\
-%     5 tsp Provence spices \\ \\
-%     Black pepper \\
-%     3 cups of red or white wine \\
-%     1 1/2 cups of Italian bread crumbs (up to 3 cups if needed) \\
-%     2 packages of pie dough from Metro (Francois Hubert pie dough 1kg makes 5 bases \\
-%     Flour \\
-%     2 eggs \\
-% }
-
-\marginnote[20pt]{
-    \textbf{Makes 6 meat pies} \newline
-    Prep time: 3 hours \newline
+\marginnote{
+    \textbf{Makes 6 meat pies} \\
+    Prep time: 3 hours \\
     Cook time: 45 minutes, or 20 minutes for partially cooked (frozen) pies \vspace*{\baselineskip}
 
-    5 pounds minced veal (2.3kg) \newline
-    4 pounds minced pork (1.8kg) \newline
-    2 pounds minced lean beef (907g or 1kg) \newline
-    Small pack of bacon with maple \newline
-    Becel margarine \newline
-    1/4 onion chopped in small pieces \newline
-    5 tsp Provence spices \newline
-    Black pepper \newline
-    3 cups of red or white wine \newline
-    1 1/2 cups of Italian bread crumbs (up to 3 cups if needed) \newline
-    2 packages of pie dough from Metro (Francois Hubert pie dough 1kg makes 5 bases) \newline
-    Flour \newline
+    5 pounds minced veal (2.3kg) \\
+    4 pounds minced pork (1.8kg) \\
+    2 pounds minced lean beef (907g or 1kg) \\
+    Small pack of bacon with maple \\
+    Becel margarine \\
+    1/4 onion chopped in small pieces \\
+    5 tsp Provence spices \\
+    Black pepper \\
+    3 cups of red or white wine \\
+    1 1/2 cups of Italian bread crumbs (up to 3 cups if needed) \\
+    2 packages of pie dough from Metro (Francois Hubert pie dough 1kg makes 5 bases) \\
+    Flour \\
     2 eggs
 }
 
-% \newthought{}
-% \bigskip
+Family member: Aunt Joanne
 
 \begin{enumerate}
     \item Place the bacon on parchment paper on a tray and cook it in the oven. Once cooked, place it in bowl.
