--- a/dermardiros/pastameatsauce.tex
+++ b/dermardiros/pastameatsauce.tex
@@ -1,12 +1,10 @@
 \chapter{Pasta and Meat Sauce}
-\label{ch:hamquiche}
+\label{ch:pastameatsauce}
 \index{meat}
 \index{meal}
 \index{pasta}
 
-Family member: Aunt Joanne
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 6-8 portions} \\
     Prep time: 30-45 minutes \\
     Cook time: 5 hours \\
@@ -30,8 +28,7 @@ Family member: Aunt Joanne
     Pasta of your choice
 }
 
-% \newthought{}
-% \bigskip
+Family member: Aunt Joanne
 
 \begin{enumerate}
     \item Slice the dried sausage and put it aside.
