--- a/dermardiros/quiche.tex
+++ b/dermardiros/quiche.tex
@@ -5,9 +5,7 @@
 \index{pie}
 \index{brunch}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 quiche} \\
     Prep time: 30-45 minutes \\
     Cook time: 45 minutes \\
@@ -18,11 +16,10 @@ Family member: Sybil
     6 slices of ham, cut \\
     5 eggs \\
     1 cup (250 ml) 15\% cooking cream \\
-    Pepper \\
+    Pepper 
 }
 
-% \newthought{}
-% \bigskip
+Family member: Sybil
 
 \begin{enumerate}
     \item Prepare a 9 inch pie plate with the pie dough.
