--- a/dermardiros/souloukefteh.tex
+++ b/dermardiros/souloukefteh.tex
@@ -3,11 +3,8 @@
 \index{meal}
 \index{meat}
 \index{soup}
-\textit{Soupe boulettes de viande}
 
-Family member: Metzma Lucie
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 4 servings} \\
     Prep time: \\
     Cook time: 3 1/2-4 hours \\
@@ -31,8 +28,12 @@ Family member: Metzma Lucie
     Salt \& pepper to taste
     3 white or Russet potatoes, cubed \\
     Carrots, chopped (optional) \\
-    1/4 cup rice, Calrose (or orzo) \\
+    1/4 cup rice, Calrose (or orzo) 
 }
+
+\textit{Soupe boulettes de viande}
+
+Family member: Metzma Lucie
 
 \begin{enumerate}
     \item Add all the ingredients for the stock except the tomato paste in a large pot and bring it to a boil. Cook for 2.5 hours.
