--- a/dermardiros/strawberrysalad.tex
+++ b/dermardiros/strawberrysalad.tex
@@ -3,9 +3,7 @@
 \index{salad}
 \index{fruit}
 
-Family member: Aunt Joanne
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 8 servings} \\
     Prep time: 20 minutes \\
     Cook time: 7-10 minutes \\
@@ -16,11 +14,10 @@ Family member: Aunt Joanne
     3/4 cup of pecans \\
     1/2 cup of virgin olive oil \\
     1/4 cup of balsamic vinegar \\
-    1/4 cup of maple syrup \\
+    1/4 cup of maple syrup 
 }
 
-% \newthought{}
-% \bigskip
+Family member: Aunt Joanne
 
 \begin{enumerate}
     \item Preheat your oven to 350\degree F. Spread the pecans evenly onto a rimmed baking sheet and bake for 7 to 10 minutes, until they begin to brown and become aromatic, making sure to toss halfway through. Remove from the oven and let cool.
