--- a/dermardiros/tahini.tex
+++ b/dermardiros/tahini.tex
@@ -3,9 +3,7 @@
 \index{dip}
 \index{sesame}
 
-Family member: Sybil
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 large bowl} \\
     Prep time: 15 minutes \\
     \vspace*{\baselineskip}
@@ -15,16 +13,13 @@ Family member: Sybil
     Juice of 5 lemons \\
     Garlic, finely chopped \\
     Cumin \\
-    Salt \\
+    Salt 
 }
 
-% \newthought{}
-% \bigskip
+Family member: Sybil
 
 \begin{enumerate}
     \item Add all the ingredients to a blender or chopper, and blend until smooth. Adjust with cumin and salt to taste.
 \end{enumerate}
 
-\marginnote{
-    You can also add the ingredients in a bowl and whisk until they all come together.
-}
+You can also add the ingredients in a bowl and whisk until they all come together.
