--- a/dermardiros/yulelog.tex
+++ b/dermardiros/yulelog.tex
@@ -5,15 +5,13 @@
 \index{cake}
 \index{Christmas}
 
-Family member: Aunt Joanne
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 yule log} \\
     Prep time: 2-3 hours + setting time in the fridge \\
     Cook time: 15-20 minutes \\
     \vspace*{\baselineskip}
 
-\textbf{Ingredients for the cake:} \\
+\textbf{Ingredients for the cake} \\
     5 eggs, separated at room temperature \\
     1 cup confectioners’ sugar \\
     1/8 tsp salt \\
@@ -21,21 +19,20 @@ Family member: Aunt Joanne
     3/4 cup cocoa powder \\
     \vspace*{\baselineskip}
 
-\textbf{Ingredients for the Mocha-Cream Filling:} \\
+\textbf{Ingredients for the Mocha-Cream Filling} \\
     3 cups whipping cream \\
     1 cup cocoa powder \\
     1/2 cup confectioners’ sugar \\
     3-4 tbsp Kahlua \\
     \vspace*{\baselineskip}
 
-    \textbf{For decoration (optional):} \\
+    \textbf{For decoration (optional)} \\
     Lindt chocolate balls (dark, milk, white) \\
     Raspberries \\
-    Chocolate Santa Clause or Snowman \\
+    Chocolate Santa Clause or Snowman
 }
 
-% \newthought
-% \bigskip
+Family member: Aunt Joanne
 
 \begin{enumerate}
     \item Preheat oven to 400\degree F. Grease the bottom of pan with margarine. Place parchment paper on top, and spray Pam on the parchment paper.
@@ -50,15 +47,16 @@ Family member: Aunt Joanne
     \item If desired, you can cut a piece at the end of the log cake and place it on the top of the cake – far left side to resemble a knot in the log. Spread the filling on the slice too.
 \end{enumerate}
 
-\marginnote{
-    You can decorate the top of the log cake either with:
-    \vspace*{\baselineskip}
-    - Lindt chocolate balls, alternating white, dark, milk chocolate. You can put raspberries between the chocolate balls \\
-    - Chocolate Santa Clause or Snowman \\
-}
+You can decorate the top of the log cake either with:
+\vspace*{\baselineskip}
+- Lindt chocolate balls, alternating white, dark, milk chocolate. You can put raspberries between the chocolate balls \\
+- Chocolate Santa Clause or Snowman
+
 
 \begin{figure}
   \includegraphics[width=60mm]{dermardiros/images/Logcake.JPG}
     \caption{Yule Log we made with AJ in 2011}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{dermardiros/images/Logcake 3.JPG}    
 \end{figure}
