--- a/main.tex
+++ b/main.tex
@@ -12,27 +12,104 @@
 \frontmatter
 \maketitle
 \include{copyright}
+% TODO: align heading
+% TODO: big page number
 \tableofcontents
 
 
 \mainmatter
-
 \ensureevenpage
-\part{Appetizers}
-\fancyfoot[C]{\small{Appetizers}}
+\part{Dermardiros Family}  % images in \dermardiros\images, ditto for rest
+\fancyfoot[C]{\small{Dermardiros Family}}
 \userecipegeometry
-\include{recipe_001}
+\include{dermardiros/clementinesalad}
+\include{dermardiros/strawberrysalad}
+\include{dermardiros/tahini}
+\include{dermardiros/betteraves}
+\include{dermardiros/lahanai_dolma}
+\include{dermardiros/mantuh}
+\include{dermardiros/foul}
+\include{dermardiros/koubeba}
+\include{dermardiros/souloukefteh}
+\include{dermardiros/batons_sale}
+\include{dermardiros/beureg}
+\include{dermardiros/quiche}
+\include{dermardiros/hamquiche}
+\include{dermardiros/meatpies}
+\include{dermardiros/pastameatsauce}
+\include{dermardiros/biscuits_grandmere}
+\include{dermardiros/grandma_cake}
+\include{dermardiros/chocolate_fridge_cake}
+\include{dermardiros/khorabie}
+\include{dermardiros/cheureg_greatgrandma}
+\include{dermardiros/anoushabour}
+\include{dermardiros/katnabour}
+\include{dermardiros/yulelog}
+\include{dermardiros/ciambalone}
+\include{dermardiros/best_chocolatechip_cookies}
+\include{dermardiros/banana_cake}
+% \include{dermardiros/cheureg}  
 \restoregeometry
 
 \ensureevenpage
-\part{Other}
-\fancyfoot[C]{\small{Other}}
+\part{Monanteras Family}
+\fancyfoot[C]{\small{Monanteras Family}}
 \userecipegeometry
-\include{recipe_002}
+\include{monanteras/patatesavga}
+\include{monanteras/fakes}
+\include{monanteras/fassolakia}
+\include{monanteras/mavromatika}
+\include{monanteras/kolokithokeftedes}
+\include{monanteras/hilopites with chicken}
+\include{monanteras/chicken with potatoes}
+\include{monanteras/meatsauce}
+\include{monanteras/lasagna}
+\include{monanteras/gemista}
+\include{monanteras/lamb and potatoes}
+% \include{monanteras/chocolate_cake}
+\include{monanteras/easter_koulourakia}
+\include{monanteras/eastereggs}
+% \include{monanteras/moustokouloura}
+\include{monanteras/karidopita}
+\include{monanteras/portokalopita}
+\include{monanteras/melomakarona}
+\include{monanteras/diples}
+\include{monanteras/lemon_cake}
+\include{monanteras/tsoureki}
+\include{monanteras/bikini_ladies}
 \restoregeometry
+
+\ensureevenpage
+\part{Elsa \& Vasken}
+\fancyfoot[C]{\small{Elsa \& Vasken}}
+\userecipegeometry
+\include{velsa/gigantest_plaki}
+\include{velsa/roasted_beet_salad_with_ricotta}
+\include{velsa/kourabiewithnuts}
+\include{velsa/tsoureki_choreg}
+% \include{velsa/babka}
+% \include{extra/chocolate_chip_cookies}
+\restoregeometry
+
+% TODO: DELETE these, testing...
+% \ensureevenpage
+% \part{Appetizers}
+% \fancyfoot[C]{\small{Appetizers}}
+% \userecipegeometry
+% \include{recipe_001}
+% \restoregeometry
+%
+% \ensureevenpage
+% \part{Other}
+% \fancyfoot[C]{\small{Other}}
+% \userecipegeometry
+% \include{recipe_002}
+% \restoregeometry
 
 
 \backmatter
+% TODO: align heading
+% TODO: big page number
 \printindex
 
 \end{document}
