--- a/monanteras/bikini_ladies.tex
+++ b/monanteras/bikini_ladies.tex
@@ -4,11 +4,8 @@
 \index{cookies}
 \index{molasses}
 \index{Christmas}
-\textit{Gingerbread Cookies}
 
-Family member: Elsa \& Helen
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 24 cookies} \\
     Prep time: 2+ hours \\
     Cook time: 7-10 minutes \\
@@ -30,13 +27,16 @@ Family member: Elsa \& Helen
     \textbf{Ingredients for royal icing} \\
     2 egg whites \\
     2 tsp lemon juice \\
-    3 cups icing sugar, sifted \\
+    3 cups icing sugar, sifted 
 }
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{monanteras/images/Bikini ladies.png}
   \caption{Bikini Ladies and Hipsters}
-  \label{fig:fig}
 \end{marginfigure}[20pt]
+
+\textit{Gingerbread Cookies}
+
+Family member: Elsa \& Helen
 
 \newthought{Bikini Ladies} were created because we were dreaming of the beach while we were making gingerbread cookies during winter in Montreal!
 
