--- a/monanteras/chicken with potatoes.tex
+++ b/monanteras/chicken with potatoes.tex
@@ -4,9 +4,7 @@
 \index{chicken}
 \index{potatoes}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 4 servings} \\
     Prep time: 25 minutes \\
     Cook time: 1 hour and 30 minutes \\
@@ -20,8 +18,10 @@ Family member: Mom
     Salt \\
     Pepper \\
     Oregano \\
-    Paprika \\
+    Paprika 
 }
+
+Family member: Mom
 
 \begin{enumerate}
     \item In a large pan, place chicken flat down.
