--- a/monanteras/chocolate_cake.tex
+++ b/monanteras/chocolate_cake.tex
@@ -3,12 +3,8 @@
 \index{dessert}
 \index{cake}
 \index{chocolate}
-\textit{A Very Chocolatey Cake with Syrup and Maraschino Cherries}
 
-Family member: Grandma Eleni
-
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 cake} \\
     Prep time: ? minutes \\
     Cook time: ? minutes \\
@@ -32,19 +28,19 @@ Family member: Grandma Eleni
     \textbf{Ingredients for syrup} \\
     1 cup water \\
     1 cup sugar \\
-    1 tbsp lemon juice \\
+    1 tbsp lemon juice 
 }
+
+\textit{A Very Chocolatey Cake with Syrup and Maraschino Cherries}
+
+Family member: Grandma Eleni
 
 \begin{figure}  % [20pt]
   \includegraphics[width=60mm]{monanteras/images/Chocolate cake 2.jpg}
   \caption{Celebrating Grandma's 80^{th} birthday}
+\end{figure}
+\begin{figure}  % [20pt]
   \includegraphics[width=60mm]{monanteras/images/Chocolate cake.jpg}
   \caption{The Chocolate Cake}
-  \label{fig:fig}
 \end{figure}
 
-\newthought{Grandma Ελένη} 
-
-\begin{enumerate}
-    \item 
-\end{enumerate}
