--- a/monanteras/diples.tex
+++ b/monanteras/diples.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{honey}
 \index{Christmas}
-\textit{Greek honey dipped fried pastries}
 
-Family member: Grandma Elisavet
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 12+ servings} \\
     Prep time: 45 minutes \\
     Cook time: 1 hour \\
@@ -18,10 +15,13 @@ Family member: Grandma Elisavet
     Flour, all-purpose, as much as the dough takes \\
     Greek honey \\
     Walnuts, crushed \\
-    Cinnamon \\
-    \vspace*{\baselineskip}
-
+    Cinnamon
 }
+
+\textit{Greek honey dipped fried pastries}
+
+Family member: Grandma Elisavet
+
 \newthought{Every Christmas} my grandma would make \textgreek{δίπλες}. A traditional Greek dessert from the Peloponnessos, diples are light and airy fried dough dipped in honey, walnuts and dusted with cinnamon. They can be kept for 1-2 weeks in a plastic container, lined with plastic wrap.
 
 \begin{enumerate}
