--- a/monanteras/easter_koulourakia.tex
+++ b/monanteras/easter_koulourakia.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{cookies}
 \index{Easter}
-\textit{The White Cookies}
 
-Family member: Grandma Eleni
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 45 cookies} \\
     Prep time: 20-30 minutes \\
     Cook time: 12-15 minutes \\
@@ -19,11 +16,14 @@ Family member: Grandma Eleni
     3/4 cup butter, unsalted, melted and cooled \\
     1 tsp ammonia powder \\
     2 tsp baking powder \\
-    3/4 tsp vanilla powder (or 1 tsp vanilla extract) \\
+    3/4 tsp vanilla powder (or 1 tsp vanilla extract) 
 }
 
-\newthought{Grandma} \textgreek{Ελένη} would make \textgreek{κουλουράκια} every Easter. They are best eaten soon after baking with a coffee or dipped in milk. Since she made a large batch, she would keep them stored in Tupperwares, which made them soft. We all preferred them that way!
+\textit{The White Cookies}
 
+Family member: Grandma Eleni
+
+\newthought{Grandma} \textgreek{Ελένη} would make \textgreek{κουλουράκια} every Easter. They are best eaten soon after baking with a coffee or dipped in milk. Since she made a large batch, she would keep them stored in Tupperwares, which made them soft. We all preferred them that way!
 
 \begin{enumerate}
     \item In a large bowl, mix the flour with the baking powder and vanilla powder (if using).
@@ -39,7 +39,7 @@ Family member: Grandma Eleni
 
 \begin{marginfigure}
   \includegraphics[width=60mm]{monanteras/images/Easter koulourakia.jpg}
-\end{marginfigure}[20pt]
+\end{marginfigure}
 
 \begin{figure}
   \includegraphics[width=60mm]{monanteras/images/IMG_20241009_171710.jpg}
