--- a/monanteras/eastereggs.tex
+++ b/monanteras/eastereggs.tex
@@ -4,7 +4,7 @@
 
 Family member: Mom
 
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 48 painted eggs} \\
     Prep time: 10 minutes \\
     Cook time: 20 minutes \\
@@ -14,9 +14,7 @@ Family member: Mom
     48 eggs \\
     1 pack of Red Dye for Eggs, Rida \\
     1/2 cup vinegar \\
-    Vegetable oil \\
-    \vspace*{\baselineskip}
-
+    Vegetable oil
 }
 
 \newthought{After every} Easter dinner we would all gather around the table to break the painted eggs. At the end, we would have egg shell on the entire table and our hands would be red! And every year, a different person would have the "strongest" egg!     The dye can be found at Greek bakeries such as at Afroditi or Serano Bakery in Laval. Mom found this method to yield the deepest red colored eggs.
@@ -32,11 +30,17 @@ Family member: Mom
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{monanteras/images/Easter eggs with grandma.jpg}
   \caption{Easter with Grandma Eleni}
-\end{marginfigure}[20pt]
+\end{marginfigure}
 
 \begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Eggs 3.jpg}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Eggs 5.jpg}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Eggs 4.jpg}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Eggs 7.jpg}
 \end{figure}
