--- a/monanteras/fassolakia.tex
+++ b/monanteras/fassolakia.tex
@@ -3,11 +3,8 @@
 \index{meal}
 \index{green beans}
 \index{tomato}
-\textit{Green beans with potatoes}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 8+ servings} \\
     Prep time: 15-20 minutes \\
     Cook time: 1-2 hours \\
@@ -19,16 +16,17 @@ Family member: Mom
     1/2 cup parsley, chopped \\
     Salt \\
     Oil \\
-    3-5 red potatoes, peeled and quartered (keep in cold water) \\
+    3-5 red potatoes, peeled and quartered (keep in cold water) 
 }
+
+\textit{Green beans with potatoes}
+
+Family member: Mom
 
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{monanteras/images/Green beans 1.jpg}
   \caption{Fassolakia}
-\end{marginfigure}[20pt]
-
-% \newthought{}
-% \bigskip
+\end{marginfigure}
 
 \begin{enumerate}
     \item Wash green beans and remove both edges.
@@ -40,6 +38,5 @@ Family member: Mom
     \item When you can poke the potatoes with a knife and the sauce has reduced, remove the pot from the heat and cover. Let cool for about 1 hour before eating.
 \end{enumerate}
 
-\marginnote{
-    Eat with a large piece of feta and village bread!
-}
+Eat with a large piece of feta and village bread!
+
