--- a/monanteras/gemista.tex
+++ b/monanteras/gemista.tex
@@ -4,11 +4,8 @@
 \index{rice}
 \index{vegetables}
 \index{meat}
-\textit{Tomatoes and Peppers stuffed with meat and rice}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 8+ servings} \\
     Prep time: 45 minutes \\
     Cook time: 1 hour \\
@@ -30,6 +27,10 @@ Family member: Mom
     Salt, pepper and oregano \\
     Grated Pecorino cheese, Chelmos Greek
 }
+
+\textit{Tomatoes and Peppers stuffed with meat and rice}
+
+Family member: Mom
 
 \newthought {Gemista} are vegetables stuffed with rice, minced meat and herbs cooked with potatoes in a tomato sauce. They are usually made with tomatoes, bell peppers, zucchini, eggplants... My grandmother even stuffed potatoes because I didn't like vegetables as a child! \textgreek{Καλή όρεξη}!
 
