--- a/monanteras/hilopites with chicken.tex
+++ b/monanteras/hilopites with chicken.tex
@@ -3,11 +3,8 @@
 \index{meal}
 \index{chicken}
 \index{pasta}
-\textit{Homemade egg pasta in broth with chicken}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 6-8 servings} \\
     Prep time: 15-30 minutes \\
     Cook time: 2 hours \\
@@ -20,9 +17,12 @@ Family member: Mom
     Pepper \\
     1/2 can tomato sauce, Hunt's (213ml) or 1 full can \\
     1 tbsp tomato paste (optional) \\
-    1 cup hilopites, or orzo/pasta \\
+    1 cup hilopites, or orzo/pasta 
 }
 
+\textit{Homemade egg pasta in broth with chicken}
+
+Family member: Mom
 
 \newthought{Grandma} \textgreek{Ελισσάβετ} makes \textgreek{χυλοπήτες} every summer in Greece and brings them to us when she comes back to Canada. Mom would make this dish with grandma's homemade, but you can find \textgreek{χυλοπήτες} at Greek supermarkets like Marché PA and Atlantis.
 
@@ -37,4 +37,4 @@ Family member: Mom
     \item Once hilopites are cooked and soup has thickened, remove from the heat and add back the chicken.
 \end{enumerate}
 
-\marginnote{Serve with lots of grated Romano or Parmesan. Can also make the hilopites without chicken.}
+Serve with lots of grated Romano or Parmesan. Can also make the hilopites without chicken.
