--- a/monanteras/karidopita.tex
+++ b/monanteras/karidopita.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{cake}
 \index{walnut}
-\textit{Walnut Cake with Syrup}
 
-Family member: Grandma Eleni
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes ?} \\
     Prep time: ? minutes \\
     Cook time: ? minutes \\
@@ -28,8 +25,12 @@ Family member: Grandma Eleni
 
     \textbf{Ingredients for syrup} \\
     3 cups sugar \\
-    2 cups water \\
+    2 cups water 
 }
+
+\textit{Walnut Cake with Syrup}
+
+Family member: Grandma Eleni
 
 \newthought{Helen} made this recipe for a work lunch and everyone was obsessed with them!
 
@@ -41,6 +42,6 @@ Family member: Grandma Eleni
     \item Let the cake cool and cut into diamond shapes.
 \end{enumerate}
 
-\marginnote{
-    Koupa used by grandma for this recipe is equivalent to ? ml.
-}
+% TODO:
+Koupa used by grandma for this recipe is equivalent to ? ml.
+
