--- a/monanteras/kolokithokeftedes.tex
+++ b/monanteras/kolokithokeftedes.tex
@@ -3,11 +3,8 @@
 \index{side}
 \index{zucchini}
 \index{feta}
-\textit{Zucchini fritters}
 
-Family member: Grandma Eleni
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 16 patties} \\
     Prep time: 20 minutes \\
     Cook time: 30 minutes \\
@@ -23,14 +20,16 @@ Family member: Grandma Eleni
     1/2 tsp pepper \\
     1 tsp garlic powder \\
     3/4 - 1 cup breadcrumbs \\
-    1 tbsp oil \\
+    1 tbsp oil 
 } 
+
 \begin{marginfigure}
   \includegraphics[width=60mm]{monanteras/images/Zucchini fritter.jpg}
 \end{marginfigure}
 
-% \newthought{}
-% \bigskip
+\textit{Zucchini fritters}
+
+Family member: Grandma Eleni
 
 \begin{enumerate}
     \item Squeeze out the excess water from the zucchinis using a towel.
@@ -39,6 +38,5 @@ Family member: Grandma Eleni
     \item Lightly flour the patties and fry until golden brown.
 \end{enumerate}
 
-\marginnote{
-    Best eaten warm, next to grilled meat.
-}
+Best eaten warm, next to grilled meat.
+
