--- a/monanteras/lamb and potatoes.tex
+++ b/monanteras/lamb and potatoes.tex
@@ -1,4 +1,4 @@
-\chapter{Roasted lamb and potatoes}
+\chapter{Roasted Lamb and Potatoes}
 \label{ch:lambpotatoes}
 \index{meal}
 \index{lamb}
@@ -6,7 +6,7 @@
 
 Family member: Mom \& Dad
 
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 8+ servings} \\
     Prep time: 45 minutes \\
     Cook time: 1 1/2 - 2 hours \\
@@ -19,11 +19,8 @@ Family member: Mom \& Dad
     Olive oil \\
     Oregano \\
     2 lemons, juiced \\
-    4 red potatoes, peeled and quartered \\
+    4 red potatoes, peeled and quartered 
 }
-
-% \newthought{}
-% \bigskip
 
 \begin{enumerate}
     \item Preheat oven to 350\degree F.
@@ -36,8 +33,8 @@ Family member: Mom \& Dad
 \begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Lamb.jpg}
   \caption{Lamb before putting it in the oven}
-  \label{fig:fig}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Lamb 2.jpg}
   \caption{Lamb after cooking}
-  \label{fig:fig}
 \end{figure}
