--- a/monanteras/lasagna.tex
+++ b/monanteras/lasagna.tex
@@ -5,9 +5,7 @@
 \index{meat}
 \index{cheese}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 8+ servings} \\
     Prep time: 30-45 minutes \\
     Cook time: 35 minutes \\
@@ -21,11 +19,12 @@ Family member: Mom
     500g lasagna noodles, Primo (around 12 sheets) \\
     1 jar of Catelli Garden Select Tomato \& Basil Pasta Sauce (640ml) \\
     Shredded mozzarella cheese \\
-    Grated Pecorino cheese, Chelmos Greek or mitzithra \\
+    Grated Pecorino cheese, Chelmos Greek or mitzithra 
 }
 
+Family member: Mom
+
 \newthought{Lasagna} was a comforting dinner Mom used to make on Sundays. We would get yelled at for eating the top layer of pieces (: You can omit the ricotta \& spinach layer if you want and make it a very meat and cheesy lasagna!
-% \bigskip
 
 \begin{enumerate}
     \item Preheat oven to 350\degree F and grease a 9X13-inch ovenproof dish with Pam spray.
@@ -39,6 +38,5 @@ Family member: Mom
     \item Bake for 35-45 minutes, or until the top is golden and bubbly and the corners are crusty. Let cool before cutting into slices! Enjoy :)
 \end{enumerate}
 
-\marginnote{
-    Leave the frozen spinach on the counter for a few hours to defrost. Squeeze out the liquid as much as you can before adding it to the egg and ricotta.
-}
+Leave the frozen spinach on the counter for a few hours to defrost. Squeeze out the liquid as much as you can before adding it to the egg and ricotta.
+
