--- a/monanteras/lemon_cake.tex
+++ b/monanteras/lemon_cake.tex
@@ -1,13 +1,10 @@
-\chapter{Lemon cake}
+\chapter{Lemon Cake}
 \label{ch:Lemoncake}
 \index{dessert}
 \index{cake}
 \index{lemon}
-\textit{Lemon no-bake cake with peaches}
 
-Family member: Grandma Eleni
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 1 Pyrex dish} \\
     Prep time: 30 minutes + overnight chilling\\
     Cook time: 0 minutes \\
@@ -22,13 +19,17 @@ Family member: Grandma Eleni
     \textbf{Ingredients for decoration} \\
     Nutriwhip, or Coolwhip, or Heavy whipping cream \\
     Maraschino cherries \\
-    Slivered almonds \\
+    Slivered almonds
 }
+
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{monanteras/images/Shirriff Lemon pie mix.png}
   \caption{Shirriff Lemon pie mix}
-  \label{fig:fig}
-\end{marginfigure}[20pt]
+\end{marginfigure}
+
+\textit{Lemon no-bake cake with peaches}
+
+Family member: Grandma Eleni
 
 \newthought{I have} vague memories of eating this cake during summertime on my grandma's balcony, when it was really hot and sunny. The sourness and refreshing lemon was perfect during summertime.
 
@@ -43,5 +44,7 @@ Family member: Grandma Eleni
 \begin{figure}
   \includegraphics[width=80mm]{monanteras/images/Lemon cake.jpg}
     \caption{Celebrating Grandma's 84th birthday}
+\end{figure}
+\begin{figure}
   \includegraphics[width=80mm]{monanteras/images/Lemon cake 2.jpg}
 \end{figure}
