--- a/monanteras/mavromatika.tex
+++ b/monanteras/mavromatika.tex
@@ -3,11 +3,8 @@
 \index{meal}
 \index{spinach}
 \index{beans}
-\textit{Spinach stew with black eye peas}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 6 servings} \\
     Prep time: 20 minutes \\
     Cook time: 2 hours + overnight soaking \\
@@ -17,11 +14,12 @@ Family member: Mom
     1 medium onion, grated \\
     1/2 - 1 can tomato sauce, Hunt’s (213 ml) \\
     2 bags of spinach, fresh \\
-    Olive oil \\
+    Olive oil 
 }
 
-% \newthought{}
-% \bigskip
+\textit{Spinach stew with black eye peas}
+
+Family member: Mom
 
 \begin{enumerate}
     \item Soak black eyed peas in water overnight.
@@ -32,7 +30,6 @@ Family member: Mom
     \item After about 1 hour to 1 hour and a half, check the beans for doneness, then turn off heat and let cool.
 \end{enumerate}
 
-\marginnote{
-    To speed things up, I would use 1 can of black eyed peas and skip Steps 1 and 2. It is quicker to make and would take a total of 45 min to cook.
-    Also really good with, you guessed it, a slice of village bread and a large piece of feta!
-}
+To speed things up, I would use 1 can of black eyed peas and skip Steps 1 and 2. It is quicker to make and would take a total of 45 min to cook.
+
+Also really good with, you guessed it, a slice of village bread and a large piece of feta!
