--- a/monanteras/melomakarona.tex
+++ b/monanteras/melomakarona.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{cookies}
 \index{walnut}
-\textit{Honey Cookies with Walnuts and Syrup}
 
-Family member: Grandma Eleni
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes ? cookies} \\
     Prep time: ? minutes \\
     Cook time: 30 minutes \\
@@ -28,8 +25,12 @@ Family member: Grandma Eleni
     Greek honey \\
     1/2 cup sugar \\
     1/2 cup water \\
-    Walnuts, crushed \\
+    Walnuts, crushed
 }
+
+\textit{Honey Cookies with Walnuts and Syrup}
+
+Family member: Grandma Eleni
 
 \begin{enumerate}
     \item In a large bowl, mix all the ingredients for the melomakarona. Start with 6 cups flour, and add more to get texture needed to shape.
@@ -40,4 +41,5 @@ Family member: Grandma Eleni
     \item Decorate with crushed walnuts before storing them in a large Tupperware.
 \end{enumerate}
 
-\marginnote{Koupa used by grandma for this recipe is equivalent to ? ml.}
+% TODO: koupa
+Koupa used by grandma for this recipe is equivalent to ? ml
