--- a/monanteras/moustokouloura.tex
+++ b/monanteras/moustokouloura.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{cookies}
 \index{molasses}
-\textit{The Brown Cookies}
 
-Family member: Grandma Eleni
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 48 cookies} \\
     Prep time: 2-3 hours \\
     Cook time: 12-15 minutes \\
@@ -22,8 +19,12 @@ Family member: Grandma Eleni
     3/4 cup sugar \\
     1/2 vegetable oil \\
     1/2 orange juice (fresh is better) \\
-    1/2 cup molasses \\
+    1/2 cup molasses
 }
+
+\textit{The Brown Cookies}
+
+Family member: Grandma Eleni
 
 \newthought{The Brown Cookies} is what we called these cookies. Since \textgreek{μούστο} (grape must) was not easy to find in Canada, Grandma \textgreek{Ελένη} replaced it with molasses. They are a bit tricky to shape, so use some vegetable oil on your hands while shaping.
 
@@ -38,9 +39,10 @@ Family member: Grandma Eleni
 
 \begin{figure}
   \includegraphics[width=80mm]{monanteras/images/Moustokouloura.jpg}
+\end{figure}
+\begin{figure}
   \includegraphics[width=80mm]{monanteras/images/Moustokouloura recipe.jpg}
 \end{figure}
 
-\marginnote{
-    Eat soon after baking, and once cooled, stored in a large Tupperware. This allows them to be soft and can be kept for a long time if you can resist.
-}
+Eat soon after baking, and once cooled, stored in a large Tupperware. This allows them to be soft and can be kept for a long time if you can resist.
+
