--- a/monanteras/patatesavga.tex
+++ b/monanteras/patatesavga.tex
@@ -4,11 +4,8 @@
 \index{potatoes}
 \index{dinner}
 \index{breakfast}
-\textit{Patates me avga}
 
-Family member: Grandma Elisavet
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 4+ servings} \\
     Prep time: 15 hours \\
     Cook time: 20 minutes \\
@@ -17,10 +14,13 @@ Family member: Grandma Elisavet
     Potatoes \\
     Eggs \\
     Olive oil \\
-    Mitzithra or Pecorino romano, grated \\
-    \vspace*{\baselineskip}
-
+    Mitzithra or Pecorino romano, grated 
 }
+
+\textit{Patates me avga}
+
+Family member: Grandma Elisavet
+
 \newthought{Grandma Elisavet} would make \textgreek{πατάτες με αυγά} often for my dad and uncle when they were little. It was a meal that was easily put together and can sustain you for hours! Everytime we would visit our house in Dara, grandma would always have a place ready for us when we arrived because she knew we had travelled a long way and were hungry.
 
 \begin{enumerate}
@@ -34,6 +34,8 @@ Family member: Grandma Elisavet
 \begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Dara.pdf}
   \caption{The House}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/Grandma elisavet.jpg}
   \caption{In front of the house in Dara, Tripoli}
 \end{figure}
