--- a/monanteras/portokalopita.tex
+++ b/monanteras/portokalopita.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{cake}
 \index{orange}
-\textit{Orange Phyllo Cake}
 
-Family member: Helen
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 15 servings} \\
     Prep time: 45 minutes \\
     Cook time: 50 minutes - 1 hour \\
@@ -33,8 +30,12 @@ Family member: Helen
     1 1/2 cups water \\
     1/3 cup orange juice \\
     1 cinnamon stick \\
-    1/4 tsp orange blossom water, optional \\
+    1/4 tsp orange blossom water, optional 
 }
+
+\textit{Orange Phyllo Cake}
+
+Family member: Helen
 
 \newthought{Another recipe} Helen made for a work potluck. Approved by her Greek manager who loves this dessert!
 
@@ -52,11 +53,10 @@ Family member: Helen
 
 \begin{figure}
   \includegraphics[width=60mm]{monanteras/images/portokalopita.jpg}
-  \label{fig:marginfig}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{monanteras/images/portokalopita2.jpg}
-  \label{fig:marginfig}
 \end{figure}
 
-\marginnote{
-    You can decorate each piece of portokalopita with slices of oranges or keep it simple. Gets better with time :)
-}
+You can decorate each piece of portokalopita with slices of oranges or keep it simple. Gets better with time :)
+
