--- a/monanteras/tsoureki.tex
+++ b/monanteras/tsoureki.tex
@@ -4,11 +4,8 @@
 \index{bread}
 \index{mahleb}
 \index{Easter}
-\textit{Easter bread}
 
-Family member: Grandma Eleni
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes ? round braids} \\
     Prep time: 6+ hours \\
     Cook time: 30-45 minutes \\
@@ -29,10 +26,14 @@ Family member: Grandma Eleni
     Aluminium foil \\
     Colored Easter eggs \\
     2 eggs, for egg wash \\
-    Slivered almonds \\
+    Slivered almonds
 }
 
-\newthought\newthought{Easter} is not Easter without \textgreek{τσουρέκι}! I can just think of the delicious smell as they're baking in the oven. If you would like to add a red Easter Egg, you can do so while shaping and bake it in the oven. Grandma \textgreek{Ελένη} would crumple a piece of foil and place it in the center of the circle to hold the shape while it bakes. Once cooled, she would remove the foil and replace it with a Easter Egg.
+\textit{Easter bread}
+
+Family member: Grandma Eleni
+
+\newthought{Easter} is not Easter without \textgreek{τσουρέκι}! I can just think of the delicious smell as they're baking in the oven. If you would like to add a red Easter Egg, you can do so while shaping and bake it in the oven. Grandma \textgreek{Ελένη} would crumple a piece of foil and place it in the center of the circle to hold the shape while it bakes. Once cooled, she would remove the foil and replace it with a Easter Egg.
 
 \begin{enumerate}
     \item  In a small bowl, put the yeast with a little bit of sugar and warm water. Mix and leave it for half an hour.
