--- a/recipe_001.tex
+++ b/recipe_001.tex
@@ -31,7 +31,7 @@
     3 cups icing sugar, sifted
 }
 
-In a large bowl, combine the dry ingredients (flour, sugar, baking powder, and salt). In another bowl, whisk together the milk, egg, and melted butter.
+\newthought{In a large bowl}, combine the dry ingredients (flour, sugar, baking powder, and salt). In another bowl, whisk together the milk, egg, and melted butter.
 
 Gradually add the wet ingredients to the dry ingredients, stirring until just combined.
 
