--- a/velsa/chickencacciatore.tex
+++ b/velsa/chickencacciatore.tex
@@ -4,11 +4,8 @@
 \index{chicken}
 \index{tomato}
 \index{peppers}
-\textit{Chicken stew with peppers and mushrooms}
 
-Family member: Elsa \& Vaski
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 4-6 servings} \\
     Prep time: 20 minutes \\
     Cook time: 1 hour \\
@@ -26,8 +23,12 @@ Family member: Elsa \& Vaski
     1-2 tbsp harissa \\
     Salt \\
     Pepper \\
-    2 tbsp parsley, chopped \\
+    2 tbsp parsley, chopped
 }
+
+\textit{Chicken stew with peppers and mushrooms}
+
+Family member: Elsa \& Vaski
 
 \begin{enumerate}
     \item In a large Creuset (or pot that can go in the oven), use half the oil to brown the chicken pieces. Season with salt and pepper, set aside on a plate with paper towel once cooked through.
@@ -36,6 +37,4 @@ Family member: Elsa \& Vaski
 
 \end{enumerate}
 
-\marginnote[]{
-    Serve with basmati rice or pasta, sprinkle with parsley.
-}
+Serve with basmati rice or pasta, sprinkle with parsley.
