--- a/velsa/kourabiewithnuts.tex
+++ b/velsa/kourabiewithnuts.tex
@@ -3,11 +3,8 @@
 \index{dessert}
 \index{cookies}
 \index{Christmas}
-\textit{Shortbread cookies with powdered sugar and almonds}
 
-Family member: Elsa \& Vaski
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 25-30 cookies} \\
     Prep time: 45 minutes \\
     Cook time: 15-20 minutes \\
@@ -28,8 +25,9 @@ Family member: Elsa \& Vaski
   \includegraphics[width=60mm]{velsa/images/Kourabie.jpg}
 \end{marginfigure}
 
-% \newthought{}
-% \bigskip
+\textit{Shortbread cookies with powdered sugar and almonds}
+
+Family member: Elsa \& Vaski
 
 \begin{enumerate}
     \item Preheat oven to 400\degree F and toast 150g of the almonds for 7-8 minutes. Once completely cooled, pulse in a food processor until coarsely chopped and pieces remain so the cookies will be crunchy. Place them aside in a small bowl.
