--- a/velsa/roasted_beet_salad_with_ricotta.tex
+++ b/velsa/roasted_beet_salad_with_ricotta.tex
@@ -1,12 +1,10 @@
-\chapter{Roasted beet salad with ricotta}
+\chapter{Roasted Beet Salad with Ricotta}
 \label{ch:roasted-beet-salad}
 \index{salad}
 \index{beet}
 \index{ricotta}
 
-Family member: Elsa \& Vaski
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 4-6 servings} \\
     Prep time: 20 minutes \\
     Cook time: 45 minutes \\
@@ -22,8 +20,10 @@ Family member: Elsa \& Vaski
     55g pistachios, toasted and chopped \\
     Olive oil \\
     Rosemary, fresh \\
-    Salt \& pepper to taste \\
+    Salt \& pepper to taste
 }
+
+Family member: Elsa \& Vaski
 
 \begin{enumerate}
     \item  In a large bowl, toss beets with olive oil, rosemary, salt and pepper. If using yellow and red beets, toss separately. Place in aluminum foil pouches, onto a baking sheet and roast about 45 minutes at 400\degree F, or until you can easily poked them with a knife. Cool.
@@ -31,7 +31,6 @@ Family member: Elsa \& Vaski
     \item On a pretty plate, spread some of the ricotta or goat cheese and place the beets in the middle. Place the supremes of citrus and drizzle some of the vinaigrette. Add chopped parsley, chopped pistachios and some dollops of ricotta and goat cheese.
 \end{enumerate}
 
-\marginnote{
-    Can keep in the fridge for a little while before serving.
-    Really good next to a grilled meat or lamb dish with potatoes.
-}
+Can keep in the fridge for a little while before serving.
+Really good next to a grilled meat or lamb dish with potatoes.
+
