--- a/velsa/tsoureki_choreg.tex
+++ b/velsa/tsoureki_choreg.tex
@@ -4,11 +4,8 @@
 \index{bread}
 \index{mahleb}
 \index{Easter}
-\textit{Easter bread}
 
-Family member: Elsa \& Vaski
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 6 medium braids} \\
     Prep time: 5-6 hours \\
     Cook time: 30-45 minutes \\
@@ -33,8 +30,12 @@ Family member: Elsa \& Vaski
         
     \textbf{Before baking} \\
     2 egg yolks and 1 egg white, for egg wash \\
-    Slivered almonds \\
+    Slivered almonds 
 }
+
+\textit{Easter bread}
+
+Family member: Elsa \& Vaski
 
 \newthought{Our recipe} is based on Vaski's Family Choreg recipe with a few modifications! It contains both mahleb and \textgreek{μαστίχα}. Make sure to use All purpose flour not bread flour, yields a more fluffy Cheureg/Tsoureki.
 
@@ -51,7 +52,10 @@ Family member: Elsa \& Vaski
 
 \begin{figure}
   \includegraphics[width=70mm]{velsa/images/PXL_20240331_211621965.PORTRAIT.ORIGINAL.jpg}
+\end{figure}
+\begin{figure}
   \includegraphics[width=70mm]{velsa/images/PXL_20240331_230346663.PORTRAIT.ORIGINAL.jpg}
-  \vspace*{\baselineskip}
+\end{figure}
+\begin{figure}
   \includegraphics[width=100mm]{velsa/images/Tsoureki braid_Aki.PNG}
 \end{figure}
