--- a/dermardiros/mantuh.tex
+++ b/dermardiros/mantuh.tex
@@ -3,11 +3,8 @@
 \index{meal}
 \index{dumplings}
 \index{meat}
-\textit{Meat-filled dumplings}
 
-Family member: Metzma Lucie
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 2 full pans} \\
     Prep time: 2-3 hours \\
     Cook time: 30 minutes \\
@@ -25,8 +22,12 @@ Family member: Metzma Lucie
     1 medium onion, thinly chopped \\
     1 lb ground lean beef \\
     Salt \& pepper to taste \\
-    Armenian or Lebanese pepper \\
+    Armenian or Lebanese pepper 
 }
+
+\textit{Meat-filled dumplings}
+
+Family member: Metzma Lucie
 
 \begin{enumerate}
     \item Chop onion and cook in a medium pot for 1-2 minutes until soft.
@@ -47,7 +48,5 @@ Family member: Metzma Lucie
     \item Eat with yogurt, sriracha and sprinkle with sumac!
 \end{enumerate}
 
-\marginnote{
-    After first cooking in oven, Sybil would normally cook them in a broth and eat as a soup. You can top with a little yogurt in there too!
-    Can store cooked in bags in the freezer, reheat in oven before eating.
-}
+After first cooking in oven, Sybil would normally cook them in a broth and eat as a soup. You can top with a little yogurt in there too!
+Can store cooked in bags in the freezer, reheat in oven before eating.
