--- a/monanteras/fakes.tex
+++ b/monanteras/fakes.tex
@@ -3,11 +3,8 @@
 \index{meal}
 \index{lentils}
 \index{soup}
-\textit{Lentil soup}
 
-Family member: Mom
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 6-8 servings} \\
     Prep time: 30 minutes + overnight soaking \\
     Cook time: 2 hours \\
@@ -20,11 +17,12 @@ Family member: Mom
     1 can tomato sauce, Hunt's (213ml) \\
     3 bay leaves \\
     1 pinch salt \\
-    Carrots, sliced (optional) \\
+    Carrots, sliced (optional) 
 }
 
-% \newthought{}
-% \bigskip
+\textit{Lentil soup}
+
+Family member: Mom
 
 \begin{enumerate}
     \item Soak lentils in cold water overnight (around 12 hours). The next day, drain out the water using a sieve.
@@ -35,6 +33,4 @@ Family member: Mom
     \item Simmer until the soup thickens and lentils are cooked, about 1 hour and 30 minutes.
 \end{enumerate}
 
-\marginnote{
-    Eat with toasted sourdough bread and a piece of feta! Normally we halve this recipe and add paprika and pepper for taste. You can also add the garlic while browning the onions.
-}
+Eat with toasted sourdough bread and a piece of feta! Normally we halve this recipe and add paprika and pepper for taste. You can also add the garlic while browning the onions.
