--- a/velsa/babka.tex
+++ b/velsa/babka.tex
@@ -4,23 +4,21 @@
 \index{bread}
 \index{chocolate}
 
-Family member: Elsa \& Vaski
-
-\marginnote[20pt]{\\
+\marginnote{
     \textbf{Makes 2 medium loaves or 1 giant loaf} \\
     Prep time:  hours \\
     Cook time:  minutes \\
     \vspace*{\baselineskip}
 
     2 ¼ tsp instant yeast \\
-    2 tsp mahleb \\
-
+    2 tsp mahleb
 }
 
 \begin{marginfigure}[20pt]
   \includegraphics[width=60mm]{velsa/images/Babka.png}
-  \label{fig:fig}
 \end{marginfigure}
+
+Family member: Elsa \& Vaski
 
 \begin{enumerate}
     \item  In a mixing bowl, whisk the dry ingredients. In another bowl, whisk wet ingredients together. Gradually add wet ingredients to dry ingredients while mixing. Mix for 5 minutes with the paddle. Let rest for a few minutes.
@@ -29,13 +27,11 @@ Family member: Elsa \& Vaski
 
 \begin{figure}
   \includegraphics[width=60mm]{velsa/images/PXL_20230513_193701113.jpg}
-  \label{fig:marginfig}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{velsa/images/PXL_20230513_194822519.jpg}
-  \label{fig:marginfig}
+\end{figure}
+\begin{figure}
   \includegraphics[width=60mm]{velsa/images/Babka at picnic.jpg}
-  \label{fig:marginfig}
 \end{figure}
 
-% \marginnote[]{
-%     vvvv
-% }
