--- a/velsa/tsoureki_choreg.tex
+++ b/velsa/tsoureki_choreg.tex
@@ -37,17 +37,17 @@
 
 Family member: Elsa \& Vaski
 
-\newthought{Our recipe} is based on Vaski's Family Choreg recipe with a few modifications! It contains both mahleb and \textgreek{μαστίχα}. Make sure to use All purpose flour not bread flour, yields a more fluffy Cheureg/Tsoureki.
+\newthought{Our recipe} is based on Vaski's Family Choreg recipe with a few modifications! It contains both mahleb and \textgreek{μαστίχα}. Make sure to use All purpose flour not bread flour, yields a more fluffy \mbox{Cheureg/Tsoureki}.
 
 \begin{enumerate}
-    \item  In a mixing bowl, whisk the dry ingredients. In another bowl, whisk wet ingredients together. Gradually add wet ingredients to dry ingredients while mixing. Mix for 5 minutes with the paddle. Let rest for a few minutes.
-    \item  Mix for 5-7 minutes while adding about 90g additional flour until dough comes together and sides start to unstick. Switch to hook attachment. (If dough already has come together don't add any additional flour).
-    \item  Add 1/3 of the butter and mix until fully incorporated before adding another third. Do the same for the last third of the butter.
-    \item  Mix on medium until dough is smooth, has unstuck from the sides of the bowl and passes the windowpane test. Approximately 20 minutes of mixing total. Place dough in a bowl, cover with plastic wrap and let rise for 90 minutes in a warm place - in the oven with lights on/oven off works well!
-    \item  Divide dough into 80g and shape into balls. Shape into small logs and into 6 braids. If you have extra strands you can make individual kaiser buns. Let rise 1 hour to 1 hour and a half. 
-    \item  Meanwhile, preheat the oven to 350\degree F.
-    \item  Brush with egg wash and add slivered almonds on top of each braid. Bake for 20 minutes, rotate pans and place another plan under pans (double) and bake for another 7 to 10+ minutes or until brown. Larger braids can be baked for 35 minutes.
-    \item  Cool, share with family/friends and enjoy with coffee!
+    \item In a mixing bowl, whisk the dry ingredients. In another bowl, whisk wet ingredients together. Gradually add wet ingredients to dry ingredients while mixing. Mix for 5 minutes with the paddle. Let rest for a few minutes.
+    \item Mix for 5-7 minutes while adding about 90g additional flour until dough comes together and sides start to unstick. Switch to hook attachment. (If dough already has come together don't add any additional flour).
+    \item Add 1/3 of the butter and mix until fully incorporated before adding another third. Do the same for the last third of the butter.
+    \item Mix on medium until dough is smooth, has unstuck from the sides of the bowl and passes the windowpane test. Approximately 20 minutes of mixing total. Place dough in a bowl, cover with plastic wrap and let rise for 90 minutes in a warm place - in the oven with lights on/oven off works well!
+    \item Divide dough into 80g and shape into balls. Shape into small logs and into 6 braids. If you have extra strands you can make individual kaiser buns. Let rise 1 hour to 1 hour and a half. 
+    \item Meanwhile, preheat the oven to 350\degree F.
+    \item Brush with egg wash and add slivered almonds on top of each braid. Bake for 20 minutes, rotate pans and place another plan under pans (double) and bake for another 7 to 10+ minutes or until brown. Larger braids can be baked for 35 minutes.
+    \item Cool, share with family/friends and enjoy with coffee!
 \end{enumerate}
 
 \begin{figure}
